--- a/src/i18n/locales/kz.json
+++ b/src/i18n/locales/kz.json
@@ -1,6 +1,280 @@
 {
-  "welcome": "Coffee Shop-қа қош келдіңіз",
+  "welcome": "COFFEINO-ға қош келдіңіз",
   "add_to_cart": "Себетке қосу",
   "price": "Баға",
-  "language": "Тіл"
+  "language": "Тіл",
+
+  "navigation": {
+    "home": "Басты бет",
+    "catalog": "Каталог",
+    "tracking": "Заказ іздеу",
+    "about": "Біз туралы",
+    "contacts": "Байланыс"
+  },
+
+  "homepage": {
+    "hero": {
+      "title": "Әлеміне қош келдіңіз",
+      "subtitle": "Әлемнің ең жақсы бұрыштарынан келетін премиум кофенің ерекше дәмін ашыңыз",
+      "catalog_button": "Каталогқа өту",
+      "about_button": "Біз туралы"
+    },
+    "features": {
+      "title": "Неге бізді таңдайды",
+      "varieties": {
+        "title": "Ең жақсы сорттар",
+        "description": "Әлемнің әртүрлі елдерінен тек премиум кофе сорттарын таңдаймыз"
+      },
+      "delivery": {
+        "title": "Жылдам жеткізу",
+        "description": "Қазақстан бойынша және ТМД елдеріне ең қысқа мерзімде жеткіземіз"
+      },
+      "quality": {
+        "title": "Сапа",
+        "description": "Әр дәндің тазалығы мен сапасын кепілдейміз"
+      },
+      "gifts": {
+        "title": "Сыйлықтар",
+        "description": "Клиенттерімізге арналған арнайы ұсыныстар мен сыйлықтар"
+      }
+    },
+    "showcase": {
+      "title": "Біздің хиттер",
+      "ethiopian": {
+        "name": "Эфиопиялық Йиргачефф",
+        "description": "Цитрус пен гүл ноталары бар жарқын, жемісті дәм",
+        "price": "2,500 ₸-ден бастап"
+      },
+      "colombian": {
+        "name": "Колумбиялық Супремо",
+        "description": "Шоколад ноталары бар теңгерімді дәм",
+        "price": "2,200 ₸-ден бастап"
+      },
+      "jamaican": {
+        "name": "Ямайкалық Блю Маунтин",
+        "description": "Ащылықсыз жұмсақ, сәнді дәм",
+        "price": "4,500 ₸-ден бастап"
+      },
+      "view_all": "Барлық сорттарды көру"
+    },
+    "cta": {
+      "title": "Кофе саяхатыңызды бастауға дайынсыз ба?",
+      "subtitle": "Сапалы кофені сүйетін мыңдаған адамдарға қосылыңыз",
+      "button": "Кофе таңдау"
+    }
+  },
+
+  "about": {
+    "hero": {
+      "title": "Біз туралы",
+      "subtitle": "Біз - әлемнің әртүрлі бұрыштарынан ең жақсы сорттарды іздеуге және жеткізуге өмірлерін арнаған кофе сүйгіштерінің командасымыз"
+    },
+    "story": {
+      "title": "Біздің тарихымыз",
+      "paragraph1": "COFFEINO сапалы кофеге деген қарапайым құмарлықтан туылды. 2015 жылы кішігірім отбасылық бизнес ретінде басталып, біз Қазақстан мен ТМД елдеріндегі премиум кофенің жетекші жеткізушісіне айналдық.",
+      "paragraph2": "Біздің миссиямыз - планетамыздың ең алыс бұрыштарында туылатын әр кофе сүйгішіне ерекше дәмдер мен хош иістерді ашу."
+    },
+    "values": {
+      "title": "Біздің құндылықтарымыз",
+      "quality": {
+        "title": "Сапа",
+        "description": "Тек тексерілген жеткізушілер мен фермерлермен жұмыс істеп, әр кофе сортін мұқият таңдаймыз"
+      },
+      "honesty": {
+        "title": "Шынайылық",
+        "description": "Жұмыста ашықтық, шынайы бағалар және клиенттерімізбен диалогқа ашықтық"
+      },
+      "sustainability": {
+        "title": "Тұрақтылық",
+        "description": "Экологиялық жауапкершілікті өндіріс пен әділ сауданы қолдаймыз"
+      },
+      "passion": {
+        "title": "Құмарлық",
+        "description": "Кофеге деген махаббатымыз бізді күн сайын жаңа бірегей дәмдерді іздеуге шабыттандырады"
+      }
+    },
+    "team": {
+      "title": "Біздің командамыз",
+      "alexey": {
+        "name": "Алексей Петров",
+        "role": "Негізін қалаушы және CEO",
+        "description": "Кофе индустриясында 15 жыл тәжірибе, саяхатшы және кофе білгірі"
+      },
+      "maria": {
+        "name": "Мария Козлова",
+        "role": "Бас дегустатор",
+        "description": "Сертификатталған Q-грейдер, кофе дәмі профильдері бойынша эксперт"
+      },
+      "dmitry": {
+        "name": "Дмитрий Смирнов",
+        "role": "Даму директоры",
+        "description": "Ассортиментті кеңейтуге және жаңа жеткізушілерді іздеуге жауапты"
+      }
+    },
+    "stats": {
+      "varieties": "Кофе сорттары",
+      "countries": "Жеткізуші елдер",
+      "customers": "Қанағаттанған клиенттер",
+      "years": "Нарықтағы жылдар"
+    },
+    "cta": {
+      "title": "Біздің кофемізді дәміне көруге дайынсыз ба?",
+      "subtitle": "Сапалы кофе сүйгіштерінің қауымына қосылыңыз",
+      "button": "Каталогқа өту"
+    }
+  },
+
+  "contacts": {
+    "hero": {
+      "title": "Бізбен байланысыңыз",
+      "subtitle": "Сұрақтарыңыз бар ма? Біз әрқашан көмектесуге және кез келген сұрақтарыңызға жауап беруге қуаныштымыз"
+    },
+    "info": {
+      "title": "Байланыс ақпараты",
+      "address": {
+        "title": "Мекен-жай",
+        "value": "Макаатаева 237<br />Алматы, Қазақстан"
+      },
+      "phone": {
+        "title": "Телефон",
+        "value": "+7 (747) 345 56 87"
+      },
+      "email": {
+        "title": "Электрондық пошта",
+        "value": "coffee@shop.kz"
+      },
+      "hours": {
+        "title": "Жұмыс уақыты",
+        "value": "Дүйсенбі-Жексенбі: 9:00 - 20:00"
+      },
+      "social": {
+        "title": "Әлеуметтік желілерде",
+        "whatsapp": "WhatsApp",
+        "instagram": "Instagram"
+      }
+    },
+    "form": {
+      "title": "Бізге жазыңыз",
+      "name": "Аты",
+      "email": "Электрондық пошта",
+      "phone": "Телефон",
+      "message": "Хабарлама",
+      "submit": "Хабарлама жіберу",
+      "success": "Хабарламаңыз үшін рахмет! Жақын арада сізбен байланысамыз."
+    },
+    "map": {
+      "title": "Бізді қалай табуға болады",
+      "placeholder": "Біздің орналасқан жеріміздің картасы",
+      "address": "Макаатаева 237, Алматы"
+    },
+    "faq": {
+      "title": "Жиі қойылатын сұрақтар",
+      "delivery": {
+        "question": "Тапсырыс қанша уақытта жеткізіледі?",
+        "answer": "Алматыға жеткізу 1-2 күн ішінде, Қазақстан бойынша - 3-5 күн, ТМД елдеріне - 5-10 күн ішінде жүргізіледі."
+      },
+      "return": {
+        "question": "Тауарды қайтаруға бола ма?",
+        "answer": "Иә, біз сатып алу күнінен бастап 14 күн ішінде тауар көрінісін сақтау шартымен қайтарымды қабылдаймыз."
+      },
+      "discounts": {
+        "question": "Тұрақты клиенттерге жеңілдіктер бар ма?",
+        "answer": "Иә, бізде жинақталатын жеңілдіктер мен арнайы ұсыныстар бар лоялдылық жүйесі бар."
+      },
+      "storage": {
+        "question": "Кофені қалай сақтау керек?",
+        "answer": "Кофені салқын, құрғақ жерде герметикалық орамада сақтаңыз. Тікелей күн сәулесінен аулақ болыңыз."
+      }
+    }
+  },
+
+  "footer": {
+    "delivery": {
+      "title": "Жеткізу:",
+      "description": "Қазақстан мен ТМД елдеріне тапсырыстарды жеткіземіз"
+    },
+    "schedule": {
+      "title": "Жұмыс уақыты"
+    },
+    "phone": {
+      "title": "Телефон нөмірі"
+    },
+    "email": {
+      "title": "Электрондық пошта"
+    },
+    "social": {
+      "title": "Біздің әлеуметтік желілер"
+    },
+    "address": {
+      "title": "Мекен-жай:"
+    },
+    "route": {
+      "title": "Маршрут құру:"
+    },
+    "legal": {
+      "offer": "Қоғамдық ұсыныс",
+      "privacy": "Құпиялылық саясаты"
+    },
+    "copyright": "2025, © Барлық құқықтар қорғалған",
+    "developed": "Әзірленген"
+  },
+
+  "catalog": {
+    "title": "Кофе каталогы",
+    "loading": "Жүктелуде...",
+    "no_products": "Тауарлар табылмады",
+    "cart": {
+      "title": "Себет",
+      "empty": "Сіздің себетіңіз бос",
+      "total": "Барлығы:",
+      "checkout": "Тапсырысты рәсімдеу",
+      "clear": "Себетті тазалау"
+    }
+  },
+
+  "product": {
+    "add_to_cart": "Себетке қосу",
+    "price": "Баға",
+    "description": "Сипаттама",
+    "origin": "Шығу тегі",
+    "roast": "Күйдіру дәрежесі",
+    "weight": "Салмақ"
+  },
+
+  "cart": {
+    "title": "Сатып алу себеті",
+    "empty": "Сіздің себетіңіз бос",
+    "item": {
+      "remove": "Жою",
+      "quantity": "Саны"
+    },
+    "total": "Барлығы:",
+    "checkout": "Тапсырысты рәсімдеу",
+    "continue": "Сатып алуды жалғастыру",
+    "clear": "Себетті тазалау"
+  },
+
+  "not_found": {
+    "title": "Бет табылмады",
+    "description": "Өкінішке орай, сұралған бет жоқ немесе жылжытылған.",
+    "home_button": "Басты бетке оралу",
+    "catalog_button": "Каталогқа өту",
+    "illustration": "Ой! Кофе төгілген сияқты..."
+  },
+
+  "common": {
+    "loading": "Жүктелуде...",
+    "error": "Қате орын алды",
+    "retry": "Қайтадан көру",
+    "close": "Жабу",
+    "save": "Сақтау",
+    "cancel": "Болдырмау",
+    "yes": "Иә",
+    "no": "Жоқ",
+    "ok": "Жарайды",
+    "added": "Қосылды",
+    "stock_left": "қоймада {{count}} дана қалды",
+    "out_of_stock": "Қоймада жоқ",
+    "purchase_success": "Сәтті сатып алынды"
+  }
 }
