--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -1,6 +1,280 @@
 {
-  "welcome": "Добро пожаловать в Кофе Шоп",
+  "welcome": "Добро пожаловать в COFFEINO",
   "add_to_cart": "Добавить в корзину",
   "price": "Цена",
-  "language": "Язык"
+  "language": "Язык",
+
+  "navigation": {
+    "home": "Главная",
+    "catalog": "Каталог",
+    "tracking": "Поиск заказа",
+    "about": "О нас",
+    "contacts": "Контакты"
+  },
+
+  "homepage": {
+    "hero": {
+      "title": "Добро пожаловать в мир",
+      "subtitle": "Откройте для себя непревзойденный вкус премиального кофе из лучших уголков мира",
+      "catalog_button": "Перейти в каталог",
+      "about_button": "О нас"
+    },
+    "features": {
+      "title": "Почему выбирают нас",
+      "varieties": {
+        "title": "Лучшие сорта",
+        "description": "Отбираем только премиальные сорта кофе из разных стран мира"
+      },
+      "delivery": {
+        "title": "Быстрая доставка",
+        "description": "Доставляем по всему Казахстану и странам СНГ в кратчайшие сроки"
+      },
+      "quality": {
+        "title": "Качество",
+        "description": "Гарантируем свежесть и качество каждого зерна"
+      },
+      "gifts": {
+        "title": "Подарки",
+        "description": "Специальные предложения и подарки для наших клиентов"
+      }
+    },
+    "showcase": {
+      "title": "Наши хиты",
+      "ethiopian": {
+        "name": "Эфиопский Йиргачефф",
+        "description": "Яркий, фруктовый вкус с нотами цитруса и цветов",
+        "price": "от 2,500 ₸"
+      },
+      "colombian": {
+        "name": "Колумбийский Супремо",
+        "description": "Сбалансированный вкус с шоколадными нотами",
+        "price": "от 2,200 ₸"
+      },
+      "jamaican": {
+        "name": "Ямайский Блю Маунтин",
+        "description": "Мягкий, элегантный вкус без горечи",
+        "price": "от 4,500 ₸"
+      },
+      "view_all": "Смотреть все сорта"
+    },
+    "cta": {
+      "title": "Готовы начать свое кофейное путешествие?",
+      "subtitle": "Присоединяйтесь к тысячам любителей качественного кофе",
+      "button": "Выбрать кофе"
+    }
+  },
+
+  "about": {
+    "hero": {
+      "title": "О нас",
+      "subtitle": "Мы — команда страстных любителей кофе, посвятивших свою жизнь поиску и доставке лучших сортов со всего мира"
+    },
+    "story": {
+      "title": "Наша история",
+      "paragraph1": "COFFEINO родился из простой страсти к качественному кофе. Начав как небольшой семейный бизнес в 2015 году, мы выросли в ведущего поставщика премиального кофе в Казахстане и странах СНГ.",
+      "paragraph2": "Наша миссия — открыть для каждого любителя кофе непревзойденные вкусы и ароматы, которые рождаются в самых отдаленных уголках нашей планеты."
+    },
+    "values": {
+      "title": "Наши ценности",
+      "quality": {
+        "title": "Качество",
+        "description": "Мы тщательно отбираем каждый сорт кофе, работая только с проверенными поставщиками и фермерами"
+      },
+      "honesty": {
+        "title": "Честность",
+        "description": "Прозрачность в работе, честные цены и открытость к диалогу с нашими клиентами"
+      },
+      "sustainability": {
+        "title": "Устойчивость",
+        "description": "Поддерживаем экологически ответственное производство и справедливую торговлю"
+      },
+      "passion": {
+        "title": "Страсть",
+        "description": "Наша любовь к кофе вдохновляет нас каждый день искать новые уникальные вкусы"
+      }
+    },
+    "team": {
+      "title": "Наша команда",
+      "alexey": {
+        "name": "Алексей Петров",
+        "role": "Основатель и CEO",
+        "description": "15 лет опыта в кофейной индустрии, путешественник и знаток кофе"
+      },
+      "maria": {
+        "name": "Мария Козлова",
+        "role": "Главный дегустатор",
+        "description": "Сертифицированный Q-грейдер, эксперт по вкусовым профилям кофе"
+      },
+      "dmitry": {
+        "name": "Дмитрий Смирнов",
+        "role": "Директор по развитию",
+        "description": "Отвечает за расширение ассортимента и поиск новых поставщиков"
+      }
+    },
+    "stats": {
+      "varieties": "Сортов кофе",
+      "countries": "Стран-поставщиков",
+      "customers": "Довольных клиентов",
+      "years": "Лет на рынке"
+    },
+    "cta": {
+      "title": "Готовы попробовать наш кофе?",
+      "subtitle": "Присоединяйтесь к сообществу любителей качественного кофе",
+      "button": "Перейти в каталог"
+    }
+  },
+
+  "contacts": {
+    "hero": {
+      "title": "Свяжитесь с нами",
+      "subtitle": "У вас есть вопросы? Мы всегда рады помочь и ответить на любые ваши вопросы"
+    },
+    "info": {
+      "title": "Контактная информация",
+      "address": {
+        "title": "Адрес",
+        "value": "Макаатаева 237<br />Алматы, Казахстан"
+      },
+      "phone": {
+        "title": "Телефон",
+        "value": "+7 (747) 345 56 87"
+      },
+      "email": {
+        "title": "Почта",
+        "value": "coffee@shop.kz"
+      },
+      "hours": {
+        "title": "График работы",
+        "value": "Пн-Вс: 9:00 - 20:00"
+      },
+      "social": {
+        "title": "Мы в соцсетях",
+        "whatsapp": "WhatsApp",
+        "instagram": "Instagram"
+      }
+    },
+    "form": {
+      "title": "Напишите нам",
+      "name": "Имя",
+      "email": "Email",
+      "phone": "Телефон",
+      "message": "Сообщение",
+      "submit": "Отправить сообщение",
+      "success": "Спасибо за ваше сообщение! Мы свяжемся с вами в ближайшее время."
+    },
+    "map": {
+      "title": "Как нас найти",
+      "placeholder": "Карта с нашим местоположением",
+      "address": "Макаатаева 237, Алматы"
+    },
+    "faq": {
+      "title": "Часто задаваемые вопросы",
+      "delivery": {
+        "question": "Как долго доставляется заказ?",
+        "answer": "Доставка по Алматы осуществляется в течение 1-2 дней, по Казахстану - 3-5 дней, в страны СНГ - 5-10 дней."
+      },
+      "return": {
+        "question": "Можно ли вернуть товар?",
+        "answer": "Да, мы принимаем возврат в течение 14 дней с момента покупки при сохранении товарного вида."
+      },
+      "discounts": {
+        "question": "Есть ли скидки для постоянных клиентов?",
+        "answer": "Да, у нас действует система лояльности с накопительными скидками и специальными предложениями."
+      },
+      "storage": {
+        "question": "Как хранить кофе?",
+        "answer": "Храните кофе в прохладном, сухом месте в герметичной упаковке. Избегайте прямых солнечных лучей."
+      }
+    }
+  },
+
+  "footer": {
+    "delivery": {
+      "title": "Доставка:",
+      "description": "Осуществляем отправку заказов по Казахстану и в страны СНГ"
+    },
+    "schedule": {
+      "title": "График работы"
+    },
+    "phone": {
+      "title": "Номер телефона"
+    },
+    "email": {
+      "title": "Почта"
+    },
+    "social": {
+      "title": "Наши соцсети"
+    },
+    "address": {
+      "title": "Адрес:"
+    },
+    "route": {
+      "title": "Построение маршрута:"
+    },
+    "legal": {
+      "offer": "Публичная оферта",
+      "privacy": "Политика конфиденциальности"
+    },
+    "copyright": "2025, © Все права защищены",
+    "developed": "Разработано с"
+  },
+
+  "catalog": {
+    "title": "Каталог кофе",
+    "loading": "Загрузка...",
+    "no_products": "Товары не найдены",
+    "cart": {
+      "title": "Корзина",
+      "empty": "Ваша корзина пуста",
+      "total": "Итого:",
+      "checkout": "Оформить заказ",
+      "clear": "Очистить корзину"
+    }
+  },
+
+  "product": {
+    "add_to_cart": "Добавить в корзину",
+    "price": "Цена",
+    "description": "Описание",
+    "origin": "Происхождение",
+    "roast": "Степень обжарки",
+    "weight": "Вес"
+  },
+
+  "cart": {
+    "title": "Корзина покупок",
+    "empty": "Ваша корзина пуста",
+    "item": {
+      "remove": "Удалить",
+      "quantity": "Количество"
+    },
+    "total": "Итого:",
+    "checkout": "Оформить заказ",
+    "continue": "Продолжить покупки",
+    "clear": "Очистить корзину"
+  },
+
+  "not_found": {
+    "title": "Страница не найдена",
+    "description": "К сожалению, запрашиваемая страница не существует или была перемещена.",
+    "home_button": "Вернуться на главную",
+    "catalog_button": "Перейти в каталог",
+    "illustration": "Ой! Кажется, кофе пролился..."
+  },
+
+  "common": {
+    "loading": "Загрузка...",
+    "error": "Произошла ошибка",
+    "retry": "Попробовать снова",
+    "close": "Закрыть",
+    "save": "Сохранить",
+    "cancel": "Отмена",
+    "yes": "Да",
+    "no": "Нет",
+    "ok": "ОК",
+    "added": "Добавлено",
+    "stock_left": "осталось {{count}} шт на складе",
+    "out_of_stock": "Нет в наличии",
+    "purchase_success": "Успешно куплено"
+  }
 }
